# rpp-vm

./: .gitignore  Cargo.toml  README.md  grammar.ebnf
src/: asm_codegen.rs  compiler.rs  interpreter.rs  main.rs  parser.rs  vm.rs
src/compiler/: mod.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs  tokens.rs
src/parser/: mod.rs
src/vm/: mod.rs
testdata/output/: rpp2cpp__interpreter__tests__interpreter.snap  rpp2cpp__lexer__tests__fizz_buzz.snap  rpp2cpp__parser__tests__parser.snap  rpp2cpp__vm__tests__vm.snap
testdata/snapshots/: test.rpp  test_program.rpp
