[package]
name = "rpp2cpp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
itertools = "0.12"
thiserror = "1.0"

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
